/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.spring.io/libs-snapshot')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    maven {
        url 'https://common.cdn.repositories.cloud.sap/sf-build-release-maven'
        credentials {
            username System.getProperty('sapRepoUsername')
            password System.getProperty('sapRepoPassword')
        }
    }
}

dependencies {
    api 'org.slf4j:slf4j-api:2.0.5'
    api 'org.springframework:spring-context:6.0.7'
    api 'org.springframework:spring-tx:6.0.7'
    api 'org.springframework.data:spring-data-commons:3.0.4'
    api 'org.apache.commons:commons-lang3:3.12.0'
    api 'joda-time:joda-time:2.12.2'
    api 'org.apache.solr:solr-solrj:9.2.1'
    api 'org.apache.solr:solr-core:9.2.1'
    api 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    api 'org.slf4j:slf4j-api:1.7.26'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.1'
    testImplementation 'org.mockito:mockito-core:3.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
    testImplementation 'org.assertj:assertj-core:3.19.0'
    testImplementation 'org.springframework:spring-test:6.0.7'
    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
    testImplementation 'org.projectlombok:lombok:1.18.20'
    testImplementation 'org.apache.solr:solr-langid:8.5.2'
    testImplementation 'org.apache.geronimo.specs:geronimo-jcdi_2.0_spec:1.3'
    testImplementation 'javax.interceptor:javax.interceptor-api:1.2.1'
    testImplementation 'javax.annotation:javax.annotation-api:1.3.2'
    testImplementation 'org.apache.openwebbeans:openwebbeans-se:2.0.22'
    testImplementation 'org.springframework:spring-jdbc:6.0.7'
    testImplementation 'com.h2database:h2:1.3.168'
    testImplementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.1'
    testImplementation 'org.mockito:mockito-core:3.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
    testImplementation 'org.assertj:assertj-core:3.19.0'
    testImplementation 'org.springframework:spring-test:6.0.7'
    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
    testImplementation 'org.projectlombok:lombok:1.18.20'
    // https://mvnrepository.com/artifact/jakarta.enterprise/jakarta.enterprise.cdi-api
    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1'
    implementation 'jakarta.activation:jakarta.activation-api:2.0.1'
}

group = 'org.springframework.data'
version = '4.4.0-SNAPSHOT'
description = 'Spring Data Solr'
java.sourceCompatibility = JavaVersion.VERSION_17

java {
    withSourcesJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
